--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear",
+    "start": "sirv docs --no-clear",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
@@ -24,6 +24,7 @@
     "simplebar": "^5.3.4",
     "sirv-cli": "^1.0.0",
     "svelte": "^3.38.3",
+    "svelte-chartjs": "^1.0.1",
     "svelte-check": "^2.0.0",
     "svelte-feather-icons": "^3.5.0",
     "svelte-loading-spinners": "^0.1.6",
