--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "sveltestrap": "^5.4.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
+  },
+  "dependencies": {
+    "luxon": "^2.0.2"
   }
 }
